--- a/Index.html
+++ b/Index.html
@@ -41,22 +41,20 @@
         <div class="container-fluid" id="principal">
             <h2>PELUQUERIA CANINA</h2>
         </div>
-        
-
         <div class="QuienesSomos">
-            <h2>Quienes Somos </h2>
-            <div class="container">
-            <div class="row">
-                <div class="col-sm-6 ">
+            <h2 id="Tituloquienes">Quienes Somos</h2>
+            <div class="container-fluid" >
+              <div class="row" id="Quienessomos">
+                <div class="col-sm-6 " id="TextoPerro">
                         <p>
                         Somos una familia que se dedicada íntegramente en pos de la salud de su mascota. Estamos habilitados para nuestro trabajo, contamos con diploma y matricula otorgada por IRAM (Instituto Argentino de Normalización y Certificación).
                         Nuestra prioridad es el bienestar general de su mascota, por tal motivo nos aseguramos que reciban una atención acorde a sus necesidades.
                         Trabajamos con productos elaborados por el Laboratorio Veterinario Interbiol, su línea de shapoo Moksha es el único producto que utilizamos para realizar el baño a sus perros.
                         Brindamos asesoramiento y promovemos el hábito rutinario del aseo en edades tempranas, con el objetivo de que lleven una vida saludable como ellos se merecen.
                         </p>
-                    </div>        
-                <div class="col-sm-6 img-fluid">
-                      <img src="./img/perrocontento.jpg" alt="" >
+                  </div>        
+              <div class="col-sm-6" id="PerroFeliz">
+                     
                 </div>
             </div>
         </div>
