--- a/index.html
+++ b/index.html
@@ -125,6 +125,77 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div> 
+    <div class="container" id="testimonio">
+      <div class="row">
+        <div class="col-md-3 col-xs-12">
+         <p><img src="./img/testimonial1.jpg" alt="" id="testimonial1"> <strong>Pichiruchi</strong></p> 
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum natus neque vero cumque omnis officia distinctio aliquam aspernatur tenetur? Laborum adipisci reiciendis, rerum maxime dignissimos pariatur voluptatum autem error culpa.</p><br>
+        </div>
+        <div class="col-md-3 col-xs-12">
+          <p><img src="./img/testimonial2.jpg" alt="" id="testimonial1"> <strong>Pichiruchi</strong></p> 
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum natus neque vero cumque omnis officia distinctio aliquam aspernatur tenetur? Laborum adipisci reiciendis, rerum maxime dignissimos pariatur voluptatum autem error culpa.</p><br>
+         </div>
+         <div class="col-md-3 col-xs-12">
+          <p><img src="./img/testimonial3.jpg" alt="" id="testimonial1"> <strong>Pichiruchi</strong></p> 
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum natus neque vero cumque omnis officia distinctio aliquam aspernatur tenetur? Laborum adipisci reiciendis, rerum maxime dignissimos pariatur voluptatum autem error culpa.</p><br>
+         </div>
+         <div class="col-md-3 col-xs-12">
+          <p><img src="./img/testimonial4.jpg" alt="" id="testimonial1"> <strong>Pichiruchi</strong></p> 
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum natus neque vero cumque omnis officia distinctio aliquam aspernatur tenetur? Laborum adipisci reiciendis, rerum maxime dignissimos pariatur voluptatum autem error culpa.</p><br>
+         </div>
+         <div class="col-md-3 col-xs-12">
+          <p><img src="./img/testimonial4.jpg" alt="" id="testimonial1"> <strong>Pichiruchi</strong></p> 
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum natus neque vero cumque omnis officia distinctio aliquam aspernatur tenetur? Laborum adipisci reiciendis, rerum maxime dignissimos pariatur voluptatum autem error culpa.</p><br>
+         </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+          <h2>Contactanos</h2>
+      </div>
+      <div class="row">
+          <h4 style="text-align:center">We'd love to hear from you!</h4>
+      </div>
+      <div class="row input-container">
+          <div class="col-xs-12">
+            <div class="styled-input wide">
+              <input type="text" required />
+              <label>NOMBRE</label> 
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <div class="styled-input">
+              <input type="text" required />
+              <label>EMAIL</label> 
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <div class="styled-input" style="float:right;">
+              <input type="text" required />
+              <label>TELEFONO</label> 
+            </div>
+          </div>
+          <div class="col-xs-12">
+              <label>TAMAÑO</label> 
+            <select class="styled-input wide">
+              <option value="opcion1">Pequeño</option>
+              <option value="opcion2">Mediano</option>
+              <option value="opcion3">Grande</option>
+            </select>
+          </div>
+
+          <div class="col-xs-12">
+            <div class="styled-input wide">
+              <textarea required></textarea>
+              <label>COMENTARIOS</label>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="btn-lrg submit-btn">ENVIAR</div>
+          </div>
+      </div>
+    </div>
+    
     
 
     <script
